--- a/er/2-references.adoc
+++ b/er/2-references.adoc
@@ -3,26 +3,26 @@
 
 The following normative documents are referenced in this document.
 
-* https://portal.opengeospatial.org/files/?artifact_id=38867&version=2[OGC 06-121r9, OGC® Web Services Common Standard]
+* https://portal.opengeospatial.org/files/?artifact_id=38867&version=2[OGC: OGC 06-121r9, OGC® Web Services Common Standard]
 
-* http://www.opengis.net/doc/IS/geosparql/1.0[OGC 11-052r4, OGC® GeoSPARQL - A Geographic Query Language for RDF Data]
+* http://www.opengis.net/doc/IS/geosparql/1.0[OGC: OGC 11-052r4, OGC® GeoSPARQL - A Geographic Query Language for RDF Data]
 
-* http://docs.opengeospatial.org/is/14-111r6/14-111r6.html[OGC 14-111r6, OGC® WaterML 2: Part 3 - Surface Hydrology Features (HY_Features) - Conceptual Model]
+* http://docs.opengeospatial.org/is/14-111r6/14-111r6.html[OGC: OGC 14-111r6, OGC® WaterML 2: Part 3 - Surface Hydrology Features (HY_Features) - Conceptual Model]
 
-* http://docs.opengeospatial.org/is/16-032r2/16-032r2.html[OGC 16-032r2, OGC® WaterML 2: Part 4 – GroundWaterML 2 (GWML2)]
+* http://docs.opengeospatial.org/is/16-032r2/16-032r2.html[OGC: OGC 16-032r2, OGC® WaterML 2: Part 4 – GroundWaterML 2 (GWML2)]
 
-* https://docs.opengeospatial.org/is/16-008/16-008.html[OGC 16-008, OGC® Geoscience Markup Language 4.1 (GeoSciML)]
+* https://docs.opengeospatial.org/is/16-008/16-008.html[OGC: OGC 16-008, OGC® Geoscience Markup Language 4.1 (GeoSciML)]
 
-* http://docs.opengeospatial.org/is/15-043r3/15-043r3.html[OGC 15-043r3, Timeseries Profile of Observations and Measurements]
+* http://docs.opengeospatial.org/is/15-043r3/15-043r3.html[OGC: OGC 15-043r3, Timeseries Profile of Observations and Measurements]
 
-* http://docs.opengeospatial.org/is/09-025r2/09-025r2.html[OGC 09-025r2, OGC® Web Feature Service 2.0 Interface Standard – With Corrigendum]
+* http://docs.opengeospatial.org/is/09-025r2/09-025r2.html[OGC: OGC 09-025r2, OGC® Web Feature Service 2.0 Interface Standard – With Corrigendum]
 
-* https://portal.opengeospatial.org/files/?artifact_id=47599[OGC 12-006,	OGC® Sensor Observation Service Interface Standard]
+* https://portal.opengeospatial.org/files/?artifact_id=47599[OGC: OGC 12-006,	OGC® Sensor Observation Service Interface Standard]
 
-* https://www.iso.org/standard/59164.html[ISO 19101-1:2014, Geographic information -- Reference model -- Part 1: Fundamentals]
+* https://www.iso.org/standard/59164.html[ISO: ISO 19101-1:2014, Geographic information -- Reference model -- Part 1: Fundamentals]
 
-* https://www.iso.org/standard/42137.html[ISO 19143:2010, Geographic information -- Filter encoding]
+* https://www.iso.org/standard/42137.html[ISO: ISO 19143:2010, Geographic information -- Filter encoding]
 
-* https://www.iso.org/standard/57466.html[ISO 19150-2:2015, Geographic information -- Ontology -- Part 2: Rules for developing ontologies in the Web Ontology Language (OWL)]
+* https://www.iso.org/standard/57466.html[ISO: ISO 19150-2:2015, Geographic information -- Ontology -- Part 2: Rules for developing ontologies in the Web Ontology Language (OWL)]
 
-* https://www.iso.org/standard/32574.html[ISO 19156:2011, Geographic information -- Observations and measurements]
+* https://www.iso.org/standard/32574.html[ISO: ISO 19156:2011, Geographic information -- Observations and measurements]
