--- a/er/7-standards.adoc
+++ b/er/7-standards.adoc
@@ -9,12 +9,12 @@ Given this, the ELFIE sought to define a common approach to encoding links betwe
 
 === OGC Web Standards
 
-OGC Web Service standards for features and observations (WFS, SOS, and SensorThings API) were used to construct HTTP URLs for use in the ELFIE linked data documents as much as possible.
+OGC Web Service standards for features and observations (WFS, Sensor Observation Service (SOS), and SensorThings API) were used to construct HTTP URLs for use in the ELFIE linked data documents as much as possible.
 While the WFS and SOS APIs present some challenges in creating URLs for use in linked data, the APIs do offer sufficient HTTP GET functionality to embed useful content in linked data with a great degree of flexibility. The situation is different with the SensorThings API, which has HTTP GET functionality, but only supports 'internal ids' to request desired features. Workarounds have been tried but they involve URL encoding features URIs which is not seen as an ideal solution. Issues related to URL structure and a given API-call’s relation to a canonical non-information resource URI were encountered but deferred for future investigations.
 
 === OGC Domain Models
 
-OGC data models were used extensively in the ELFIE. The Observations and Measurements (O&M) conceptual model provided a high level organizing framework for most ELFIE documents. The OGC-W3C Spatial Data On the Web Working Group implementation of O&M https://www.w3.org/TR/vocab-ssn/[(Sensor, Observation, Sample, and Actuator (SOSA))] was used directly because of its applicability to the linked data technology pursued in the ELFIE. The https://www.opengeospatial.org/standards/geosparql[GeoSPARQL] ontology was also used directly for representing geometries and spatial relations between features.
+OGC data models were used extensively in the ELFIE. The Observations and Measurements (O&M) conceptual model provided a high-level organizing framework for most ELFIE documents. The OGC-W3C Spatial Data On the Web Working Group implementation of O&M https://www.w3.org/TR/vocab-ssn/[(Sensor, Observation, Sample, and Actuator (SOSA))] was used directly because of its applicability to the linked data technology pursued in the ELFIE. The https://www.opengeospatial.org/standards/geosparql[GeoSPARQL] ontology was also used directly for representing geometries and spatial relations between features.
 
 Domain specific data models such as http://docs.opengeospatial.org/is/14-111r6/14-111r6.html[HY_Features], http://docs.opengeospatial.org/is/16-032r2/16-032r2.html[GWML2] and https://docs.opengeospatial.org/is/16-008/16-008.html[GeoSciML] were also used for feature types and relations in the ELFIE linked data documents.
 
@@ -23,14 +23,14 @@ Domain specific data models such as http://docs.opengeospatial.org/is/14-111r6/1
 ********************
 A major limitation for use of these data models in the ELFIE was a lack of published taxonomies and ontologies using stable namespaces. Placeholder URIs were minted for their feature types and relations for the ELFIE project and formalization of such taxonomies and ontologies was left for future work.
 
-Not all URIs used in examples in this project are intended to be stable. Formal publication of these ontologies will supercede interim choices.
+Not all URIs used in examples in this project are intended to be stable. Formal publication of these ontologies will supersede interim choices.
 ********************
 
 === W3C
 
-W3C best practices for data on the web, spatial data on the web, and linked data were used to guide decisions related to the ELFIE linked data documents. Several members of the ELFIE project team were involved in development of these best practices and represented them throughout the project. Given this, the ELFIE was an opportunity to apply these best practices in a practical engineering process, using them together and attempting to apply them to OGC web service and information models.
+W3C best practices for data on the web, spatial data on the web, and linked data were used to guide decisions related to the ELFIE linked data documents. Several members of the ELFIE project team were involved in the development of these best practices and represented them throughout the project. Given this, the ELFIE was an opportunity to apply these best practices in a practical engineering process, using them together and attempting to apply them to OGC web service and information models.
 
-This was largely successful and no major issues were encountered related to the best practices themselves. However, they were not achieved fully due to realities of the internet, organization’s operational constraints, and limitations of current APIs and data models. In other words, a project seeking to apply current OGC standards on their infrastructure within the suggested W3C data on the web best practices would have to implement ad hoc system behavior (proxy negotiation by 'profiles', feature request by its URI, rewriting to JSON-LD, etc.). This situation is mainly due to the fact that several standardization efforts needed to support these practices are in progress (W3C DXWG, OGC WFS 3, etc.) and that enterprise systems are slow to evolve.
+This was largely successful and no major issues were encountered related to the best practices themselves. However, they were not achieved fully due to realities of the internet, organizational operational constraints, and limitations of current APIs and data models. In other words, a project seeking to apply current OGC standards on their infrastructure within the suggested W3C data on the web best practices would have to implement ad hoc system behavior (proxy negotiation by 'profiles', feature request by its URI, rewriting to JSON-LD, etc.). This situation is mainly due to the fact that several standardization efforts needed to support these practices are in progress (W3C DXWG, OGC WFS 3, etc.) and that enterprise systems are slow to evolve.
 
 Experiences from the ELFIE project are being taken forward into influencing future W3C standards through the Data Exchange Working Group, where the concept of views is being addressed within the scope of the profiles concept. Description, discovery, metadata and negotiation according to formally identified profiles mirrors the ELFIE architectural choice to publish and reuse JSON-LD contexts.
 
