--- a/er/9-outcomes.adoc
+++ b/er/9-outcomes.adoc
@@ -4,7 +4,7 @@ As described previously, the ELFIE was intended to test existing OGC and W3C sta
 
 All experimental implementations are summarized on the https://opengeospatial.github.io/ELFIE/[ELFIE demo pages.] The collection of experiments show that existing practices for encoding linked data can be used to satisfy the environmental linked features use cases considered by the ELFIE. In cases where features and related information were already published as linked data or had well established web services, these data and/or service-generated representations were easy to incorporate and use. Many of the core linked data relations used for search engine optimization were found to be suited to typical environmental linked feature use cases.
 
-Note that in the JSON-LD files provided on the ELFIE web pages, URIs are relative to the file locations on opengeospatial.github.io for linked data demo purposes. This choice helped save time for the IE as it avoided each participant to set up the corresponding mechanics within its own data infrastructure. In production situations, each data provider will end-up exposing those files using their own URI policy.
+Note that in the JSON-LD files provided on the ELFIE web pages, URIs are relative to the file locations on opengeospatial.github.io for linked data demo purposes. This choice helped save time for the IE as it avoided each participant needing to set up the corresponding mechanics within its own data infrastructure. In production situations, each data provider will end-up exposing those files using their own URI policy.
 
 === Watershed Data Index Use Case Example
 
@@ -118,7 +118,7 @@ Items to note below:
 
 <1> The two contexts used are here
 <2> The identifier for this hydrograhic network. If you follow the link, you will see the full example including geospatial property details.
-<3> The is “HY_HydrographicNetwork”. The link does not resolve yet because HY_Features have not been made available yet on the OGC server. A HY_HydrographicNetwork is a collection of waterbody features that drain to a catchment outlet.
+<3> This is “HY_HydrographicNetwork”. The link does not resolve yet because HY_Features have not been made available yet on the OGC server. A HY_HydrographicNetwork is a collection of waterbody features that drain to a catchment outlet.
 <4> The HY_HydrographicNetwork realizes a catchment describing it with as a network of lines representing waterbodies. Each realization of HY_Catchment uses both “schema:geo” and “gsp:hasGeometry” to provide both simplified representations that describe the location of the HY_Catchment  as point or surrounding polygon and a more detailed representation respectively.
 <5> The second JSON document describes the catchment as a HY_CatchmentDivide. Notice that the geometry types for the "schema:GeoShape" and the "gsp:Geometry" are polygonal. However "schema:GeoShape" only allows an envelope while "gsp:Geometry" can handle multipolygons and other more complex geometries.
 <6> The third JSON document describes the catchment as a Hydrometric_Network. Here, the Network_Stations are of primary interest. The list of stations is truncated here to improve readability, in reality, there are many more stations located in this catchment.
@@ -128,17 +128,17 @@ While additional content is available on the ELFIE demo pages, experience gained
 
 [#img_surface_ground_water_interaction,reftext='{figure-caption} {counter:figure-num}']
 .Screenshot of Surface-ground water networks interaction Demo.
-image::https://opengeospatial.github.io/ELFIE/images/surface-ground_waterinteraction_screenshot3.png[width=450,align="center"]
+image::images/surface-ground_waterinteraction_screenshot3.png[width=800,align="center"]
 
 Developing a generic client (here https://github.com/BRGM/BLiv[BLiV.]) in parallel to populating JSON-LD files helped in various ways:
 
 * It triggered the geometry discussion mentioned several times in the ER
 * It led the group to be more cautious and, in addition to validate JSON-LD payload, also validate in JSON-LD playground the contexts. The client's use of JSON-LD documents triggered various remarks on the contexts themselves.
 * Using the @id, @type, name pattern when linking to another domain object proves useful to chose an interaction type (map, timeseries graph, etc...) in a GUI.
-* Keeping the client as generic as possible, allows vizualization of not only Surface-ground water networks interaction Use Case related JSON-LD files but also, those from the other Use Cases.
-* Such an approach should proves valuable for demonstration of what linked-data is using domain-scientists own datasets as well as how it can help relate to other domains without having to modify source data.
+* Keeping the client as generic as possible, allows visualization of not only Surface-ground water networks interaction Use Case related JSON-LD files but also, those from the other Use Cases.
+* Such an approach should prove valuable for demonstration of what linked-data is using domain-scientists own datasets as well as how it can help relate to other domains without having to modify source data.
 
 === Future Work
 The experiments exposed several issues with existing and new technologies that need to be addressed to realize the full potential of the core linked data encoding technologies tested. The issue of representation of a preview geometry for a feature should be addressed and seems to be a tractable problem that could lead to significant benefits. Another tractable and important issue is creation of ontologies for domain features. As of the completion of the ELFIE, this work was already being undertaken for existing domain models where a UML to OWL conversion is possible. This was the topic of an ad hoc meeting during the OGC TC meeting in March 2018 in Orléans, France. The main outcomes are summarized in Annex A: <<ontology_from_uml>>. Other domain models, such as flood impact features, need to be created and or vetted by a community.
 
-There were also several issues highlighted by the ELFIE that were deemed out of scope and purposefully left for future efforts. The foundational issue in this category is the "landing page" or "default representation" problem. That is, how should we handle the case where a dereferenceable URI is meant to identify a real world entity with multiple digital representations. There are many related issues related to the network architecture and expected behavior when dereferencing URIs. These were generally out of scope for the ELFIE but need to be addressed to achieve interoperability and include: URI structure, use of non-information URIs with WFS and other services, and strategies for managing collections of potentially temporary linked data among many data providers. Use of the domain feature ontologies declared in the JSON-LD contexts was also out of scope. That is, JSON-LD files produced by ELFIE were not ingested by reasoning software. The extra vocabulary source are not yet taken into account by major search engines crawlers that focus mainly on the schema.org ontology.
+There were also several issues highlighted by the ELFIE that were deemed out of scope and purposefully left for future efforts. The foundational issue in this category is the "landing page" or "default representation" problem. That is, how should we handle the case where a dereferenceable URI is meant to identify a real-world entity with multiple digital representations. There are many related issues related to the network architecture and expected behavior when dereferencing URIs. These were generally out of scope for the ELFIE but need to be addressed to achieve interoperability and include: URI structure, use of non-information URIs with WFS and other services, and strategies for managing collections of potentially temporary linked data among many data providers. Use of the domain feature ontologies declared in the JSON-LD contexts was also out of scope. That is, JSON-LD files produced by ELFIE were not ingested by reasoning software. The extra vocabulary source was not yet taken into account by major search engines crawlers that focus mainly on the schema.org ontology.
